[package]
name = "color-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.2"
egui_extras = { version = "0.33.2", features = ["all_loaders"] }
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
image = { version = "0.25.9", features = ["jpeg"] }
log = "0.4.28"
rand = "0.9.2"
